apps/wiz6/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: wiz6
  namespace: wiz6
spec:
  type: ClusterIP
  selector:
    app: wiz6
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
