apps/wiz6/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: wiz6
  namespace: wiz6
spec:
  parentRefs:
    - name: goldentooth
      namespace: gateway
      sectionName: https
  hostnames:
    - wiz6.goldentooth.net
  rules:
    - backendRefs:
        - name: wiz6
          port: 80
